--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Overseer.Checker\packages.config" />
+  <repository path="..\Overseer.CheckLog\packages.config" />
   <repository path="..\Overseer.Common.Tests\packages.config" />
   <repository path="..\Overseer.Common\packages.config" />
   <repository path="..\Overseer.Doorkeeper.Tests\packages.config" />
