--- a/src/Overseer.Common/packages.config
+++ b/src/Overseer.Common/packages.config
@@ -2,7 +2,9 @@
 
 <packages>
   <package id="CsQuery" version="1.3.4" targetFramework="net45" />
+  <package id="EasyNetQ" version="0.28.4.242" targetFramework="net45" />
   <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="NEST" version="0.12.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
+  <package id="RabbitMQ.Client" version="3.2.4" targetFramework="net45" />
 </packages>
